Fix stylesheet link in index.html and add spacing in CSS for better layout

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+
 .subjects{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Espaciado entre las cajitas */
@@ -29,4 +30,7 @@
 }
 .newsubject{
 
+}
+.title{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
